@@ -1,5 +1,13 @@
 2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	yacc: add some tests on bison support (still xfailing)
+	Related to automake bug#7648 and PR automake/491.
+	* tests/bison-skeleton-cxx.test: New test.
+	* tests/bison-skeleton.test: New test.
+	* tests/Makefile.am (TESTS, XFAIL_TESTS): Updated.
+
+2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	coverage: test for automake bug#8485 (known regression)
 	* tests/yacc-dist-nobuild-subdir.test: New test.
 	* tests/Makefile.am (TESTS, XFAIL_TESTS): Update.
